k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paysecure-app
  namespace: paysecure
  labels:
    app: paysecure-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: paysecure-app
  template:
    metadata:
      labels:
        app: paysecure-app
    spec:
      containers:
        - name: paysecure-app
          image: 983988120878.dkr.ecr.ap-south-1.amazonaws.com/paysecure-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
